--- a/err.html
+++ b/err.html
@@ -81,7 +81,7 @@
 
         <div id="middle">
             <div class="card">
-                <div style="border-radius:200px; height:200px; width:200px; background: #F8FAF5; margin:0 auto;">
+                <div style="border-radius:200px; height:200px; width:200px; background: #c1597b; margin:0 auto;">
                     <i class="checkmark">✓</i>
                 </div>
                 <br>
