--- a/result.html
+++ b/result.html
@@ -98,7 +98,7 @@
 </body>
 <script>
     function backHome(argument) {
-        google.script.run.switchpage(true, 2);
+        google.script.run.switchpage(2);
     }
 </script>
 </html>
