{ADD and Modify} add endpoints and modify error-screen

--- a/action_filters.html
+++ b/action_filters.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="overflow-x: hidden;">
+<html style="overflow: hidden;">
 <head>
     <base target="_top">
     <style>
@@ -70,7 +70,6 @@
 
     <div id="page1" class="parent">
 
-
         <!-- burger -->
         <nav role="navigation" style="background: #6C69FF;">
             <div id="menuToggle">
@@ -90,7 +89,6 @@
             </div>
         </nav>
         <!-- burger -->
-
 
         <div id="top">
             <p id="hello_user">Choose a data</p>
@@ -112,7 +110,6 @@
                 </form>
                 <button type="button" id="addFilterButton" style="display: none !important; margin: 5px; opacity: 0.7 !important; border-radius: 100px !important;" class="btn btn-info btn-sm" onclick="addFilter();">+ add filter</button>
             </div>
-
 
         </div>
         <div id="bottom">
