--- a/err.html
+++ b/err.html
@@ -23,6 +23,40 @@
             margin-bottom: 0 !important;
         }
 
+        #orangeBox{
+            margin: auto;
+            width:200px;
+            height:200px;
+            background-color:red;
+            position:relative;
+            border-radius:6px;
+            box-shadow:2px 2px 4px 0 white;
+        }
+
+        #orangeBox:before,#orangeBox:after{
+            content:'';
+            position:absolute;
+            width:200px;
+            height:10px;
+            background-color:white;
+            border-radius:20px;
+            top:98px;
+            box-shadow:0 0 2px 0 #ccc;
+        }
+
+        #orangeBox:before{
+            -webkit-transform:rotate(45deg);
+            -moz-transform:rotate(45deg);
+            transform:rotate(45deg);
+            left:2px;
+        }
+        #orangeBox:after{
+            -webkit-transform:rotate(-45deg);
+            -moz-transform:rotate(-45deg);
+            transform:rotate(-45deg);
+            right:2px;
+        }
+
         body {
             text-align: center;
             padding: 40px 0;
@@ -30,7 +64,7 @@
             overflow: hidden;
         }
         h1 {
-            color: #88B04B;
+            color: red;
             font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
             font-weight: 900;
             font-size: 40px;
@@ -78,17 +112,15 @@
 
         <div id="top">
         </div>
-
         <div id="middle">
-            <div class="card">
-                <div style="border-radius:200px; height:200px; width:200px; background: #c1597b; margin:0 auto;">
-                    <i class="checkmark">✓</i>
-                </div>
-                <br>
-                <h1>Success</h1> 
-                <p>Take a look at your Sheet<br/>you'll love it !</p>
+            <div id="orangeBox">
+                
             </div>
+            <br>
+            <h1>ERROR</h1> 
+            <p>Something went wrong<br/>check your logs</p>
         </div>
+    </div>
 
         <div id="bottom">
             <button type="button" class="btn btn-primary" onclick="backHome();">Confirm</button>
