--- a/err.html
+++ b/err.html
@@ -64,6 +64,7 @@
             overflow: hidden;
         }
         h1 {
+            text-align: center;
             color: red;
             font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
             font-weight: 900;
@@ -71,6 +72,7 @@
             margin-bottom: 10px;
         }
         p {
+            text-align: center;
             color: #404F5E;
             font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
             font-size:20px;
@@ -116,6 +118,8 @@
             <div id="orangeBox">
                 
             </div>
+            <br>
+            <br>
             <br>
             <h1>ERROR</h1> 
             <p>Something went wrong<br/>check your logs</p>
