--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jun 09 2020 07:44:39 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jun 09 2020 08:03:42 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ec785a7302d4354d3034d51" data-wf-site="5ec785a7b131e942b034d051">
 <head>
   <meta charset="utf-8">
@@ -39,7 +39,7 @@
   <div class="div-block-31"><a href="https://github.com/TacTill/TaskBee" target="_blank" class="button-22 w-button">Fork me on Github</a><a href="https://gsuite.google.com/marketplace/app/taskbee/985023482671?hl=fr" class="button-21 w-button">Install Taskbee</a></div>
   <h1 class="title">Taskbee, your Google Sheets Chargebee add-on</h1>
   <div class="w-layout-grid promesse">
-    <p id="w-node-95097bb766a6-d3034d51" class="paragraph-26">Be <strong>more productive</strong> and brighten up your day. <br><br>Taskbee is a <strong>free</strong> Google Sheets add-on developed on top of Chargebee. It gives you the super power to <strong>create your own processes</strong> and <strong>highly improve</strong> your Chargebee experience.</p><a id="w-node-8c73054a2e5e-d3034d51" href="https://gsuite.google.com/marketplace/app/taskbee/985023482671?hl=fr" class="install2 w-button">Install Taskbee</a><img src="images/GIF-edited-by-GIFMaker.net-1.gif" width="1300" id="w-node-3e5fdbd840d2-d3034d51" alt="" class="image-12"></div>
+    <p id="w-node-95097bb766a6-d3034d51" class="paragraph-26">Be <strong>more productive</strong> and brighten up your day. <br><br>Taskbee is a <strong>free</strong> Google Sheets add-on developed on top of Chargebee. It gives you the super power to <strong>create your own processes</strong> and <strong>highly improve</strong> your Chargebee experience.</p><a id="w-node-8c73054a2e5e-d3034d51" href="https://gsuite.google.com/marketplace/app/taskbee/985023482671?hl=fr" class="install2 w-button">Install Taskbee</a><img src="images/gif_crop.gif" width="1300" id="w-node-3e5fdbd840d2-d3034d51" alt="" class="image-12"></div>
   <div id="features1" class="w-layout-grid feature1"><img src="images/undraw_mind_map_cwng-1.svg" width="450" id="w-node-279903b1379d-d3034d51" alt="" class="image-27">
     <h1 id="w-node-6e2338c0ba59-d3034d51" class="heading-14">Build your processes on top of Chargebee</h1>
     <p id="w-node-64d4a8851f37-d3034d51" class="paragraph-11">Taskbee was designed to add value to your work. Create your own process and <strong>automate recurring tasks</strong>; refund an invoice, create addons in bulk, charge a customer and all other time-consuming actions.<br><br>Run Taskbee on your Google Sheets, <strong>choose your data and trigger your tasks in a few clicks.</strong></p>
@@ -96,7 +96,7 @@
     <p class="paragraph-21">Taskbee is an <strong>open source project</strong>* created to brighten your Chargebee daily experience. It is built with modern JavaScript and its <strong>source code is available</strong> to all. If you want to help us improve Taskbee, join us on Github and <strong>let your talent shine through</strong>.</p>
     <div class="text-block-16">*Taskbee has no legal or professional relationship with Chargebee and Google. They are registered brands and are the exclusive and intellectual property of each one.</div><a id="w-node-272a9040c03e-d3034d51" href="https://github.com/TacTill/TaskBee" target="_blank" class="fork-me-2 w-button">Fork me on Github</a></div>
   <div class="w-layout-grid bottom">
-    <h1 id="w-node-7a53be5c0db8-d3034d51" class="heading-29">Get it, it&#x27;s free!</h1><a id="w-node-8ab840e2b9d0-d3034d51" href="https://gsuite.google.com/marketplace/app/taskbee/985023482671?hl=fr#" class="install3 w-button">Install Taskbee</a>
+    <h1 id="w-node-7a53be5c0db8-d3034d51" class="heading-29">Get it, it&#x27;s free!</h1><a id="w-node-8ab840e2b9d0-d3034d51" href="https://gsuite.google.com/marketplace/app/taskbee/985023482671?hl=fr" class="install3 w-button">Install Taskbee</a>
     <p id="w-node-2de981fa3fa1-d3034d51" class="paragraph-24">Ready to add value to <br>your daily use of Chargebee?</p>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=5ec785a7b131e942b034d051" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
