--- a/action_filters.html
+++ b/action_filters.html
@@ -6,14 +6,13 @@
         .parent 
         {
             display: grid;
-            grid-template-rows: 9vh 20vh 51vh 15vh;
+            grid-template-rows: 1fr 2fr 4fr 1.5fr;
+            height: 100vh;
         }
         #hello_user
         {
-            margin-top: 2em;
-            margin-left: 1em;
-            font-size: 2.5em;
-            line-height: 42px;
+            margin-top: 10vh;
+            margin-left: 10vw;
             color: #2D2ACD;
         }
         .textholder
@@ -28,8 +27,13 @@
             flex-flow: column wrap;
             align-items: center;   
         }
+        #APISelector
+        {
+            font-size: 1em;
+        }
         p
         {
+            font-size: 2em;
             text-align: left;
             margin-block-end: 0;
             margin-bottom: 0 !important;
@@ -37,7 +41,7 @@
 
         /*BURGER*/
 
-        body{margin: 0;padding: 0;background: #232323;color: #cdcdcd;font-family: "Avenir Next", "Avenir", sans-serif}#menuToggle{display: block;position: relative;top: 25px;left: 25px;z-index: 1;-webkit-user-select: none;user-select: none}#menuToggle a{text-decoration: none;color: #232323;transition: color 0.3s ease}#menuToggle a:hover{color: tomato}#menuToggle input{display: block;width: 40px;height: 32px;position: absolute;top: -7px;left: -5px;cursor: pointer;opacity: 0;z-index: 2;-webkit-touch-callout: none}#menuToggle span{display: block;width: 33px;height: 4px;margin-bottom: 5px;position: relative;background: #ffffff;border-radius: 3px;z-index: 1;transform-origin: 4px 0px;transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),opacity 0.55s ease}#menuToggle span:first-child{transform-origin: 0% 0%}#menuToggle span:nth-last-child(2){transform-origin: 0% 100%}#menuToggle input:checked ~ span{opacity: 1;transform: rotate(45deg) translate(-2px, -1px);background: #232323}#menuToggle input:checked ~ span:nth-last-child(3){opacity: 0;transform: rotate(0deg) scale(0.2, 0.2)}#menuToggle input:checked ~ span:nth-last-child(2){transform: rotate(-45deg) translate(0, -1px)}#menu{position: absolute;width: 300px;margin: -100px 0 0 -25px;padding: 25px;padding-top: 125px;background: #ededed;list-style-type: none;-webkit-font-smoothing: antialiased;transform-origin: 0% 0%;transform: translate(-100%, 0);transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0)}#menu li{padding: 10px 0;font-size: 22px}#menuToggle input:checked ~ ul{transform: none}
+        body{margin: 0;padding: 0;background: #232323;color: #cdcdcd;font-family: "Avenir Next", "Avenir", sans-serif}#menuToggle{display: block;position: relative;top: 3.5vh;left: 3vh;z-index: 1;-webkit-user-select: none;user-select: none}#menuToggle a{text-decoration: none;color: #232323;transition: color 0.3s ease}#menuToggle a:hover{color: tomato}#menuToggle input{display: block;width: 13vw;height: 5vh;position: absolute;top: -1vh;left: -1vw;cursor: pointer;opacity: 0;z-index: 2;-webkit-touch-callout: none}#menuToggle span{display: block;width: 10vw;height: 0.5vh;margin-bottom: 1vh;position: relative;background: #ffffff;border-radius: 3px;z-index: 1;transform-origin: 4px 0px;transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),opacity 0.55s ease}#menuToggle span:first-child{transform-origin: 0% 0%}#menuToggle span:nth-last-child(2){transform-origin: 0% 100%}#menuToggle input:checked ~ span{opacity: 1;transform: rotate(45deg);background: #232323}#menuToggle input:checked ~ span:nth-last-child(3){opacity: 0;transform: rotate(0deg) scale(0.2, 0.2)}#menuToggle input:checked ~ span:nth-last-child(2){transform: rotate(-45deg) }#menu{position: absolute;width: 300px;margin: -100px 0 0 -3vh;padding: 3vh;padding-top: 125px;background: #ededed;list-style-type: none;-webkit-font-smoothing: antialiased;transform-origin: 0% 0%;transform: translate(-100%, 0);transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0)}#menu li{padding: 10px 0;font-size: 22px}#menuToggle input:checked ~ ul{transform: none}
 
         /*BURGER*/
 
@@ -80,23 +84,25 @@
                 <ul id="menu" style="height: 100vh;">
                     <h2>Taskbee</h2>
                     <br>
-                    <h4 id="APISelector"></h4>
+                    <p id="APISelector"></p>
                     <br>
-                    <a href="#"><li>FAQ</li></a>
-                    <a href="#"><li>Give feedbacks</li></a>
-                    <a href="#"><li>Report an issue</li></a>
+                    <a href="https://github.com/TacTill/TaskBee/issues" target="_blank"><li>FAQ</li></a>
+                    <a href="https://github.com/TacTill/TaskBee" target="_blank"><li>Give feedbacks</li></a>
+                    <a href="https://github.com/TacTill/TaskBee/issues/new" target="_blank"><li>Report an issue</li></a>
                 </ul>
             </div>
         </nav>
         <!-- burger -->
 
         <div id="top">
+            <a href="https://apidocs.chargebee.com/docs/api" target="_blank">
             <p id="hello_user">Choose a data</p>
             <p id="actualUser"></p>
+            </a>
         </div>
 
         <div id="middle">
-            <div class="input-group mb-3" style="padding: 30px;">
+            <div class="input-group mb-3" style="padding: 8vw;">
                 <div class="input-group-prepend">
                     <label class="input-group-text" for="mainSelector" id="mainSelectorLabel">Data</label>
                 </div>
@@ -134,6 +140,7 @@
         else if (argument[0].indexOf('actions') >= 0) {
             selectedAction = argument[2][0];
             document.getElementById('filters').style.display = "block"
+            document.getElementById("inpbtn").disabled = false;
             document.getElementById("confbtn").disabled = false;
         }
         else if (argument[0].indexOf('filter') >= 0) {
@@ -182,13 +189,13 @@
         filters[i][whom] = rep;
     }
 
-    // these functions update the global corresponding to their selects
+    // these functions update the global corresponding to their selects and make filters appears
     function actionSelect() {
         selectedAction = $( "#mainSelector option:selected" ).text();
         if(!isPOST(selectedAction))
         {
-            addFilter();
-            document.getElementById('addFilterButton').style.display = "inline-block";
+            // addFilter();
+            // document.getElementById('addFilterButton').style.display = "inline-block";
         }
     }
 
@@ -316,6 +323,15 @@
         document.getElementById('mainSelector').onchange = function(){actionSelect();}
         document.getElementById('mainSelectorLabel').innerHTML = "Action";
         document.getElementById('hello_user').innerHTML = "Choose<br>an action";
+
+        var button2 = document.createElement("button");
+        button2.innerHTML = "Input";
+        button2.className = "btn btn-outline-primary waves-effect";
+        button2.disabled = true;
+        button2.id = 'inpbtn';
+        button2.onclick = function(){popinputs();}
+        document.getElementById('bottom').appendChild(button2);
+
         var button = document.createElement("button");
         button.innerHTML = "Confirm";
         button.className = "btn btn-primary";
@@ -328,6 +344,12 @@
         .withSuccessHandler(generateOptions)
         .getOptionsFromBack("actions"+selectedData, "mainSelector")
 
+
+    }
+
+    function popinputs() {
+          google.script.run
+        .openinputs(selectedData, selectedAction);
     }
 
     // onload function triggers at the opening of this vue
