--- a/result.html
+++ b/result.html
@@ -6,8 +6,7 @@
     <style>
         .parent 
         {
-            display: grid;
-            grid-template-rows: 50px 1fr 100px;
+            height: 100vh;
         }
         #bottom
         {
@@ -50,7 +49,7 @@
         }
         .card {
             background: white;
-            padding: 60px;
+            padding: 30px;
             border-radius: 4px;
             box-shadow: none;
             display: inline-block;
